[Tests] Remove Defunct mockserver Dependency (#955)
This replaces it with wiremock.